--- a/web/index.html
+++ b/web/index.html
@@ -56,6 +56,7 @@
         <category name="Text" colour="%{BKY_TEXTS_HUE}">
             <block type="text"></block>
             <block type="text_print"></block>
+            <block type="text_multiline"></block>
         </category>
         <sep></sep>
         <category name="Variables" custom="VARIABLE" colour="%{BKY_VARIABLES_HUE}">
