modification sans mutator

--- a/web/index.html
+++ b/web/index.html
@@ -54,9 +54,12 @@
         <category name="Math" colour="%{BKY_MATH_HUE}">
             <block type="math_number"></block>
             <block type="math_arithmetic"></block>
+            <block type="math_number_property"></block>
         </category>   
         <category name="Text" colour="%{BKY_TEXTS_HUE}">
             <block type="text"></block>
+            <block type="text_join"></block>
+            <block type="text_charAt"></block>
             <block type="text_print"></block>
             <block type="text_isEmpty"></block>
             <block type="text_multiline"></block>
@@ -73,6 +76,7 @@
         <category name="SQL" colour="42">
             <category name="Request">
                 <block type="sql_table"></block>
+                <block type="sql_column"></block>
                 <block type="sql_select"></block>
                 <block type="sql_from"></block>
                 <block type="sql_where"></block>
