--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,8 @@
     <script src="https://unpkg.com/blockly/php_compressed.js"></script>
     
     <script src="../src/customBlocks_sql.js"></script>
+    <script src="../src/sql_mutator.js"></script>
+    <script src="../src/sqlSelect.js"></script>
 
 
 
@@ -75,23 +77,30 @@
         <sep></sep>
         <category name="SQL" colour="42">
             <category name="Request">
+            	<block type="sql_select"></block>
+            	<block type="sql_all"></block>
                 <block type="sql_table"></block>
                 <block type="sql_column"></block>
-                <block type="sql_select"></block>
-                <block type="sql_from"></block>
-                <block type="sql_where"></block>
                 <block type="sql_as"></block>
                 <block type="sql_add"></block>
+                <block type="sql_order_by"></block>
+                <block type="sql_join"></block>
+                <block type="sql_in"></block>
+            </category>
+            <category name="Condition">
                 <block type="sql_and"></block>
                 <block type="sql_or"></block>
-                <block type="sql_condition"></block>
-                <block type="sql_order_by"></block>
-            </category>
+                <block type="sql_not"></block>
+                <block type="sql_null"></block>
+            </category>    
             <category name="Fonctions">
                 <block type="sql_f_sum"></block>
                 <block type="sql_f_max"></block>
                 <block type="sql_f_min"></block>
                 <block type="sql_f_count"></block>
+                <block type="sql_f_avg"></block>
+                <block type="sql_f_round"></block>
+                <block type ="sql_compare"></block>
             </category>    
         </category>
     </xml>
@@ -100,6 +109,10 @@
 
     <xml xmlns="https://developers.google.com/blockly/xml" id="startBlocks" style="display: none">
 <!--
+
+
+	///////////////////////////EXEMPLE D'AFFICHAGE DE BASE////////////////////////////////////
+
         <block type="controls_if" inline="false" x="20" y="20">
         <mutation else="1"></mutation>
         <value name="IF0">
@@ -149,9 +162,6 @@
 -->
     </xml>   
 
-
-  
-    
 
     <script>
 
